# duck_resolve

./: .gitignore  AGENTS.md  CHANGELOG.md  pyproject.toml  test_meta.md
.github/workflows/: demo-markdown.yml
docs/Demo UI/: demo_user_system.md  mermaid_overview.md  support_triage.md  vector_scalar_transition.md  weather_planner.md
docs/workdowns/: demo_user_system.md  vector_scalar_transition.md
resolver_engine/: __init__.py  app.py  demo_app.py
resolver_engine/core/: __init__.py  merge.py  planner.py  resolver_base.py  schema.py  state.py  types.py
resolver_engine/core/cache/: __init__.py  parquet_cache.py  sqlite_cache.py
resolver_engine/demos/demo_user_system/: __init__.py  resolvers.py  schemas.py
resolver_engine/demos/support_triage/: __init__.py  resolvers.py  schemas.py
resolver_engine/demos/vector_scalar_transition/: __init__.py  demo.py  resolvers.py  schemas.py
resolver_engine/demos/weather_planner/: __init__.py  resolvers.py  schemas.py
resolver_engine/web/assets/: __init__.py  app.js  styles.css
resolver_engine/web/static/: history.py  transpose.py
resolver_engine/web/templates/: __init__.py  fragments.py  history.js  index.html
scripts/: generate_demo_markdowns.py
tests/: test_additional_demos.py  test_api.py  test_cache.py  test_core_schema.py  test_demo_integration.py  test_future_demos.py  test_merge_semantics.py  test_meta_invariants.py  test_planner.py  test_resolver_registry.py  test_ui.py  test_ui_interactions.py
