[project]
name = "resolver-engine"
version = "0.1.0"
description = "Resolver engine demo"
authors = [{name = "AI"}]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn",
    "beautifulsoup4",
    "duckdb>=1.4.2",
    "pyarrow>=22.0.0",
]

[dependency-groups]
dev = ["pytest", "httpx", "mypy", "playwright"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = [
    "resolver_engine/app.py",
    "resolver_engine/demos",
    "tests/test_api.py",
]

[[tool.mypy.overrides]]
module = ["bs4", "pyarrow", "fastapi", "fastapi.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["resolver_engine.core.*", "resolver_engine.web.*", "tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.test_api"]
ignore_errors = false

[tool.uv.workspace]
members = ["_local/local"]
